Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8638

REVOKE ALL PRIVILEGES, GRANT OPTION FROM CURRENT_ROLE breaks replication

    XMLWordPrintable

Details

    • 10.0.25, 10.0.26

    Description

      Replication has some magic that (normally) allows to work correctly with such functions as CURRENT_USER and CURRENT_ROLE (see MDEV-8628, MDEV-8631). However, for REVOKE ALL PRIVILEGES, GRANT OPTION FROM CURRENT_ROLE this magic fails.

      Test case

      --source include/master-slave.inc
      --source include/have_binlog_format_mixed.inc
       
      --enable_connect_log
       
      create role r1;
      set role r1;
      grant select on db.* to current_role;
      revoke all privileges, grant option from current_role;
       
      --sync_slave_with_master

      Last_SQL_Errno	1269
      Last_SQL_Error	Error 'Can't revoke all privileges for one or more of the requested users' on query. Default database: 'test'. Query: 'revoke all privileges, grant option from current_role'

      Attachments

        Issue Links

          Activity

            People

              cvicentiu Vicențiu Ciorbaru
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.5h
                  0.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.